# MetalCompute

./: CMakeLists.txt
src/: main.mm  particles.metal
